--- a/index.html
+++ b/index.html
@@ -170,9 +170,18 @@
 <footer>
     <div class="contatti">
         <h2>Contatti</h2>
+        <div class="contactItem home">
         <p>Indirizzo: Via Coste di la' 3, Enego (VI) </p>
-        <p>Email: ale91.dallas@gmail.com</p>
-        <p>Telefono: +39 3334432853</p>
+        </div>
+        <div class="contactItem mail">
+            <p>Email: ale91.dallas@gmail.com</p>
+        </div>
+        <div class="contactItem phone">
+            <p>Telefono: +39 3334432853</p>
+        </div>
+        <div class="contactItem github">
+            <p>GitHub: <a href="https://github.com/AleDC91">AleDC91</p></a>
+        </div>
     </div>
 </footer>
 <br><br></BR><hr><br><br><br>
